--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-redux": "^7.1.24",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.1.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
+    "next-redux-wrapper": "^8.0.0",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
   }
 }
